# DreaMLand

./: README.md  readme.txt
squeezenet/app/: CMakeLists.txt  build.gradle
squeezenet/app/src/androidTest/java/dwyanewade/squeezenet/: ExampleInstrumentedTest.java
squeezenet/app/src/main/: AndroidManifest.xml
squeezenet/app/src/main/assets/: deploy_inference.param  deploy_inference_384x216.param
squeezenet/app/src/main/cpp/: squeezencnn_jni.cpp
squeezenet/app/src/main/java/dwyanewade/squeezenet/: MainActivity.java  SqueezeNcnn.java
squeezenet/app/src/test/java/dwyanewade/squeezenet/: ExampleUnitTest.java
squeezenet/gradle/wrapper/: gradle-wrapper.properties
